kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: homework
  name: kubernetes-networks
  labels:
    homework: kubernetes-networks
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      homework: kubernetes-networks
  template:
    metadata:
      labels:
        homework: kubernetes-networks
    spec:
      serviceAccountName: monitoring
      nodeSelector:
        homework: "true"
      automountServiceAccountToken: true  # Важно: разрешаем автоматическое монтирование токена
      containers:
      - name: web-server
        image: nginx:1.27.2
        ports:
        - containerPort: 8000
          name: http-web-svc
        command: ["/bin/sh", "-c"]
        args:
          - "exec nginx -g 'daemon off;'"
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: webdir
          mountPath: /homework
        - name: homework-config
          mountPath: /homework/config
          subPath: config
        - name: shared-data
          mountPath: /homework/metrics
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -f /homework/index.html"]
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 2
      volumes:
      - name: nginx-config
        configMap:
          name: configmap-homework
      - name: homework-config
        configMap:
          name: configmap-homework
      - name: webdir
        persistentVolumeClaim:
          claimName: pvc-homework
      - name: default-token  # Добавляем volume для токена
        secret:
          secretName: monitoring-token  # Имя секрета для вашего ServiceAccount
      - name: shared-data
        emptyDir: {}
